k8s-pod.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
  namespace: moodi
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: gateway-service
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  label:
    k8s-app: gateway-service
  name: gateway-service
  namespace: moodi
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gateway-service
  template:
    metadata:
      labels:
        app: gateway-service
    spec:
      containers:
      - name: gateway-service
        image: beewee/gateway-service
        ports: 
        - containerPort: 80
